linked filepath to black pieces

--- a/index.html
+++ b/index.html
@@ -2,94 +2,94 @@
 <html>
   <head>
     <title>Chess Board</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <div class="chessBoard">        
       <!-- Add the pawn div element -->
       <div class="square white">
         <div class="piece rook" color="black"  >
-            <img src="Black-Rook.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-rook.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece knight" color="black" >
-            <img src="Black-Knight.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-knight.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece bishop" color="black" >
-            <img src="Black-Bishop.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-bishop.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece queen" color="black" >
-            <img src="Black-Queen.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-queen.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece king" color="black" >
-            <img src="Black-King.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-king.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece bishop" color="black" >
-            <img src="Black-Bishop.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-bishop.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece knight" color="black">
-            <img src="Black-Knight.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-knight.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="coordinate rank whiteText">8</div>
 
         <div class="piece rook" color="black" >
-            <img src="Black-Rook.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-rook.png" alt="pawn" >
           </div>
       </div>
      <!-- ------------------------------------------------------------------------- -->
 
       <div class="square black">
         <div class="piece pawn" color="black"  >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square white">
         <div class="piece pawn" color="black" >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square black">
         <div class="piece pawn" color="black" >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square white">
         <div class="piece pawn" color="black" >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square black">
         <div class="piece pawn" color="black"  >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square white">
         <div class="piece pawn" color="black"  >
-            <img src="Black-Pawn.png" alt="pawn">
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn">
           </div>
 
       </div>
       <div class="square black">
         <div class="piece pawn" color="black"  >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
@@ -97,7 +97,7 @@
         <div class="coordinate rank blackText">7</div>
 
         <div class="piece pawn" color="black"  >
-            <img src="Black-Pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
