add file path for white pawns

--- a/index.html
+++ b/index.html
@@ -155,44 +155,44 @@
 
       <div class="square white">
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece pawn" color="white"  >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece pawn" color="white">
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square white">
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
       <div class="square black">
         <div class="coordinate rank whiteText">2</div>
 
         <div class="piece pawn" color="white" >
-            <img src="white-pawn.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
           </div>
       </div>
     <!-- ------------------------------------------------------------------------- -->
@@ -201,55 +201,55 @@
         <div class="coordinate whiteText">a</div>
 
         <div class="piece rook" color="white">
-            <img src="White-Rook.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-rook.png" alt="pawn" >
            </div>
       </div>
       <div class="square white"> 
         <div class="coordinate blackText">b</div>
 
         <div class="piece knight" color="white">
-            <img src="White-Knight.png" alt="knight" >
+            <img src="assets/css/galery/board pieces /white-knight.png" alt="knight" >
            </div>
     </div>
       <div class="square black">
         <div class="coordinate whiteText">c</div>
 
         <div class="piece bishop" color="white">
-            <img src="White-Bishop.png" alt="bishop">
+            <img src="assets/css/galery/board pieces /white-bishop.png" alt="bishop">
            </div>
       </div>
       <div class="square white">
         <div class="coordinate blackText">d</div>
 
         <div class="piece queen" color="white" >
-            <img src="White-Queen.png" alt="queen" >
+            <img src="assets/css/galery/board pieces /white-rqueen.png" alt="queen" >
            </div>
       </div>
       <div class="square black">
         <div class="coordinate whiteText">e</div>
 
         <div class="piece king" color="white">
-            <img src="White-King.png" alt="king">
+            <img src="assets/css/galery/board pieces /white-rknight.png" alt="king">
         </div>
       </div>
       <div class="square white">
         <div class="coordinate blackText">f</div>
         <div class="piece bishop" color="white" >
-            <img src="White-Bishop.png" alt="bishop" >
+            <img src="assets/css/galery/board pieces /white-bishop.png" alt="bishop" >
            </div>
       </div>
       <div class="square black">
         <div class="coordinate whiteText">g</div>
 
         <div class="piece knight" color="white" >
-            <img src="White-Knight.png" alt="knight">
+            <img src="assets/css/galery/board pieces /white-knight.png" alt="knight">
            </div>
       </div>
       <div class="square white">
         <div class="coordinate rank blackText">1</div>
         <div class="coordinate blackText">h</div>     
         <div class="piece rook" color="white" >
-            <img src="White-Rook.png" alt="pawn" >
+            <img src="assets/css/galery/board pieces /white-rook.png" alt="pawn" >
            </div>
       </div>
     </div>
