add funtion setup board squares

--- a/index.html
+++ b/index.html
@@ -255,6 +255,6 @@
     </div>
      <!-- Add the jQuery library -->
 
-    <script src="main.js"></script>
+    <script src="assets/css/js/script.js"></script>
   </body>
 </html>
