--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
       </div>
       <div class="square black">
-        <div class="coordinate rank whiteText">8</div>
+        <div class="coordinate rank whiteText"></div>
 
         <div class="piece rook" color="black" >
             <img src="assets/css/galery/board pieces /black-rook.png" alt="pawn" >
@@ -88,15 +88,15 @@
 
       </div>
       <div class="square black">
-        <div class="piece pawn" color="black"  >
+        <div class="piece pawn" color="black">
             <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
       </div>
       <div class="square white">
-        <div class="coordinate rank blackText">7</div>
+        <div class="coordinate rank blackText"></div>
 
-        <div class="piece pawn" color="black"  >
+        <div class="piece pawn" color="black">
             <img src="assets/css/galery/board pieces /black-pawn.png" alt="pawn" >
           </div>
 
@@ -110,7 +110,7 @@
       <div class="square black"></div>
       <div class="square white"></div>
       <div class="square black">
-        <div class="coordinate rank whiteText">6</div>
+        <div class="coordinate rank whiteText"></div>
 
       </div>
     <!-- ------------------------------------------------------------------------- -->
@@ -123,7 +123,7 @@
       <div class="square white"></div>
       <div class="square black"></div>
       <div class="square white">
-        <div class="coordinate rank blackText">5</div>
+        <div class="coordinate rank blackText"></div>
 
       </div>
     <!-- ------------------------------------------------------------------------- -->
@@ -136,7 +136,7 @@
       <div class="square black"></div>
       <div class="square white"></div>
       <div class="square black">
-        <div class="coordinate rank whiteText">4</div>
+        <div class="coordinate rank whiteText"></div>
 
       </div>
     <!-- ------------------------------------------------------------------------- -->
@@ -149,7 +149,7 @@
       <div class="square white"></div>
       <div class="square black"></div>
       <div class="square white">
-        <div class="coordinate rank blackText">3</div>
+        <div class="coordinate rank blackText"></div>
       </div>
     <!-- ------------------------------------------------------------------------- -->
 
@@ -189,7 +189,7 @@
           </div>
       </div>
       <div class="square black">
-        <div class="coordinate rank whiteText">2</div>
+        <div class="coordinate rank whiteText"></div>
 
         <div class="piece pawn" color="white" >
             <img src="assets/css/galery/board pieces /white-pawn.png" alt="pawn" >
@@ -198,56 +198,56 @@
     <!-- ------------------------------------------------------------------------- -->
 
       <div class="square black">
-        <div class="coordinate whiteText">a</div>
+        <div class="coordinate whiteText"></div>
 
         <div class="piece rook" color="white">
             <img src="assets/css/galery/board pieces /white-rook.png" alt="pawn" >
            </div>
       </div>
       <div class="square white"> 
-        <div class="coordinate blackText">b</div>
+        <div class="coordinate blackText"></div>
 
         <div class="piece knight" color="white">
             <img src="assets/css/galery/board pieces /white-knight.png" alt="knight" >
            </div>
     </div>
       <div class="square black">
-        <div class="coordinate whiteText">c</div>
+        <div class="coordinate whiteText"></div>
 
         <div class="piece bishop" color="white">
             <img src="assets/css/galery/board pieces /white-bishop.png" alt="bishop">
            </div>
       </div>
       <div class="square white">
-        <div class="coordinate blackText">d</div>
+        <div class="coordinate blackText"></div>
 
         <div class="piece queen" color="white" >
             <img src="assets/css/galery/board pieces /white-rqueen.png" alt="queen" >
            </div>
       </div>
       <div class="square black">
-        <div class="coordinate whiteText">e</div>
+        <div class="coordinate whiteText"></div>
 
         <div class="piece king" color="white">
             <img src="assets/css/galery/board pieces /white-rknight.png" alt="king">
         </div>
       </div>
       <div class="square white">
-        <div class="coordinate blackText">f</div>
+        <div class="coordinate blackText"></div>
         <div class="piece bishop" color="white" >
             <img src="assets/css/galery/board pieces /white-bishop.png" alt="bishop" >
            </div>
       </div>
       <div class="square black">
-        <div class="coordinate whiteText">g</div>
+        <div class="coordinate whiteText"></div>
 
         <div class="piece knight" color="white" >
             <img src="assets/css/galery/board pieces /white-knight.png" alt="knight">
            </div>
       </div>
       <div class="square white">
-        <div class="coordinate rank blackText">1</div>
-        <div class="coordinate blackText">h</div>     
+        <div class="coordinate rank blackText"></div>
+        <div class="coordinate blackText"></div>     
         <div class="piece rook" color="white" >
             <img src="assets/css/galery/board pieces /white-rook.png" alt="pawn" >
            </div>
